--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,6 +4,9 @@
     </IfModule>
 
     RewriteEngine On
+    
+    RewriteCond %{SERVER_PORT} 80 
+    RewriteRule ^(.*)$ https://katalog.bambogroup.net/$1 [R,L]
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
