--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/",
-            "App\\Classes\\": "app/Classes" 
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
